tugas list hewan detaill

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">Apk_complect</string>
+    <string name="sinopsis1">Menyandang status jomblo ternyata membuat Jono merasa makin resah sehingga ia memutuskan untuk mengakhiri status
+        tersebut secepatnya. Bersama Niko sahabatnya, Jono mulai melakukan berbagai upaya untuk mendapatkan pacar.
+        Hingga suatu hari calon pacar potensial berhasil didapatkannya dari dunia maya.</string>
+    <string name="sinopsis2">Soe Hok Gie diketahui merupakan salah seorang mahasiswa di FSUI. Semasa menjadi mahasiswa,
+        Hok Gie yang juga akrab disapa Gie ini dikenal rajin menulis dan mempublikasikan beberapa buah pikirannya
+        di berbagai media massa seperti surat kabar.</string>
+    <string name="sinopsis3">Alif lahir di pinggir Danau Maninjau dan tidak pernah menginjak tanah di luar ranah Minangkabau. Masa kecilnya adalah berburu
+        durian runtuh di rimba Bukit Barisan, bermain bola di sawah berlumpur, dan tentu mandi berkecipak di air biru Danau Maninjau.</string>
+    <string name="sinopsis4">Cerpen bertajuk Bapak Presiden yang Terhormat mengisahkan keinginan seorang rakyat kecil yang ingin bertemu dengan Bapak Presiden Indonesia.
+        Keinginan ini muncul karena tokoh utama ingin memperjuangkan nasibnya dan orang-orang di kampungnya.</string>
+    <string name="sinopsis5">Bangunan itu nyaris rubuh. Dindingnya miring bersangga sebalok kayu. Atapnya bocor di mana-mana.
+        Tetapi, berpasang-pasang mata mungil menatap penuh harap. Hendak ke mana lagikah mereka harus bersekolah selain tempat itu?
+        Tak peduli seberat apa pun kondisi sekolah itu, sepuluh anak dari keluarga miskin itu tetap bergeming. Di dada mereka,
+        telah menggumpal tekad untuk maju.
+    </string>
+
 </resources>
